@@ -25,64 +25,67 @@ import javax.swing.JTextArea;
 import javax.swing.UIManager;
 
 public class ItemList {
-	
+
 	private double fileVersion, webVersion;
 	private String listName;
 
 	private JPanel contentPane;
-	
+
 	private JTextArea searchField;
 	private JTextArea itemIdField;
 	private JTextArea itemNameField;
-	
+
 	private int[] itemId = new int[30000];
 	private String[] itemName = new String[30000];
-	
+
 	public ItemList() {
 		try {
-			UIManager.setLookAndFeel("com.sun.java.swing.plaf.windows.WindowsLookAndFeel");
+			UIManager
+					.setLookAndFeel("com.sun.java.swing.plaf.windows.WindowsLookAndFeel");
 			loadComponents();
 			loadData();
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
 	}
-	
-	public void loadComponents() throws HeadlessException, NumberFormatException, IOException {
-	    JFrame.setDefaultLookAndFeelDecorated(true);
-	    
-	    JFrame frame = new JFrame(Settings.serverName+" "+Settings.BUILD);
-	    frame.setResizable(false);
-	    frame.setFont(new Font("SansSerif", 0, 12));
-	    frame.setDefaultCloseOperation(2);
-	    frame.getContentPane().setLayout(new BorderLayout());
+
+	public void loadComponents() throws HeadlessException,
+			NumberFormatException, IOException {
+		JFrame.setDefaultLookAndFeelDecorated(true);
+
+		JFrame frame = new JFrame(Settings.serverName + " " + Settings.BUILD);
+		frame.setResizable(false);
+		frame.setFont(new Font("SansSerif", 0, 12));
+		frame.setDefaultCloseOperation(2);
+		frame.getContentPane().setLayout(new BorderLayout());
 		frame.setBounds(100, 100, 275, 541);
-	    
-	    this.itemNameField = new JTextArea();
-	    this.itemNameField.setEditable(false);
-	    this.itemIdField = new JTextArea();
-	    this.itemIdField.setEditable(false);
-	    
-	    JPanel panel = new JPanel(new FlowLayout());
-	    panel.add(this.itemNameField);
-	    panel.add(this.itemIdField);
-	    
-	    JScrollPane scrollPane = new JScrollPane(panel, 22, 31);
-	    scrollPane.setPreferredSize(new Dimension(408, 503));
-	    
+
+		this.itemNameField = new JTextArea();
+		this.itemNameField.setEditable(false);
+		this.itemIdField = new JTextArea();
+		this.itemIdField.setEditable(false);
+
+		JPanel panel = new JPanel(new FlowLayout());
+		panel.add(this.itemNameField);
+		panel.add(this.itemIdField);
+
+		JScrollPane scrollPane = new JScrollPane(panel, 22, 31);
+		scrollPane.setPreferredSize(new Dimension(408, 503));
+
 		int i = 0;
 		String str = "\n";
-		for (int j = 0; (j < this.itemName.length) && (this.itemName[j] != null); j++) {
-		if (i != 0) {
-			this.itemNameField.append(str + this.itemName[j]);
-			this.itemIdField.append(str + this.itemId[j]);
-		} else {
-			i = 1;
-			this.itemNameField.append(this.itemName[j]);
-	        this.itemIdField.append(this.itemId[j]+"");
+		for (int j = 0; (j < this.itemName.length)
+				&& (this.itemName[j] != null); j++) {
+			if (i != 0) {
+				this.itemNameField.append(str + this.itemName[j]);
+				this.itemIdField.append(str + this.itemId[j]);
+			} else {
+				i = 1;
+				this.itemNameField.append(this.itemName[j]);
+				this.itemIdField.append(this.itemId[j] + "");
+			}
 		}
-		}
-		
+
 		JButton btnNewButton = new JButton("Search");
 		btnNewButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent arg0) {
@@ -90,12 +93,12 @@ public class ItemList {
 			}
 		});
 		btnNewButton.setBounds(183, 478, 130, 34);
-	    
-	    this.searchField = new JTextArea();
-	    this.searchField.setLineWrap(false);
-	    this.searchField.setRows(1);
-	    this.searchField.setColumns(25);
-	    searchField.addKeyListener(new KeyListener() {
+
+		this.searchField = new JTextArea();
+		this.searchField.setLineWrap(false);
+		this.searchField.setRows(1);
+		this.searchField.setColumns(25);
+		searchField.addKeyListener(new KeyListener() {
 
 			@Override
 			public void keyPressed(KeyEvent keyevent) {
@@ -106,24 +109,25 @@ public class ItemList {
 			@Override
 			public void keyReleased(KeyEvent keyevent) {
 				if (keyevent.getKeyCode() == 10)
-					searchField.setText(searchField.getText().replace("\n", ""));
+					searchField
+							.setText(searchField.getText().replace("\n", ""));
 			}
 
 			@Override
 			public void keyTyped(KeyEvent keyevent) {
-			
+
 			}
-	    	
-	    });
-	    
-	    JPanel panel2 = new JPanel(new FlowLayout());
-	    panel2.add(this.searchField);
-	    panel2.add(btnNewButton);
-	    
-	    frame.getContentPane().add(scrollPane, "East");
-	    frame.getContentPane().add(panel2, "South");
-	    
-	    JButton btnUpdate = new JButton("Update");
+
+		});
+
+		JPanel panel2 = new JPanel(new FlowLayout());
+		panel2.add(this.searchField);
+		panel2.add(btnNewButton);
+
+		frame.getContentPane().add(scrollPane, "East");
+		frame.getContentPane().add(panel2, "South");
+
+		JButton btnUpdate = new JButton("Update");
 		btnUpdate.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent arg0) {
 				try {
@@ -133,42 +137,47 @@ public class ItemList {
 				}
 			}
 		});
-	    panel2.add(btnUpdate);
-	    
-	    frame.pack();
-	    frame.setVisible(true);
-	    this.searchField.requestFocus();
+		panel2.add(btnUpdate);
+
+		frame.pack();
+		frame.setVisible(true);
+		this.searchField.requestFocus();
 	}
-	
+
 	public void loadData() throws IOException {
 		Object object;
 		BufferedReader reader;
-		File path = new File(System.getProperty("user.home")+"/matrixCache4");
+		File path = new File(System.getProperty("user.home") + "/matrixCache4");
 		if (!path.exists()) {
 			path.mkdir();
 		}
-		File file = new File(System.getProperty("user.home")+"/matrixCache4/itemlist.txt");
+		File file = new File(System.getProperty("user.home")
+				+ "/matrixCache4/itemlist.txt");
 		if (!file.exists()) {
 			object = new URL("http://www.fathienblade.com/txt/itemlist.txt");
-			reader = new BufferedReader(new InputStreamReader(((URL)object).openStream()));
+			reader = new BufferedReader(new InputStreamReader(
+					((URL) object).openStream()));
 			BufferedWriter writer = new BufferedWriter(new FileWriter(file));
 			String liner;
 			while ((liner = reader.readLine()) != null) {
 				if (!liner.startsWith(" ") && !liner.equals("null"))
-				writer.append(liner+"\n");
+					writer.append(liner + "\n");
 			}
 			writer.close();
 			setData(reader);
-			JOptionPane.showMessageDialog(contentPane,"Please wait while it refreshes.", "Restart", JOptionPane.ERROR_MESSAGE);
+			JOptionPane.showMessageDialog(contentPane,
+					"Please wait while it refreshes.", "Restart",
+					JOptionPane.ERROR_MESSAGE);
 			loadData();
 		} else {
 			object = file;
-			reader = new BufferedReader(new FileReader((File)object));
+			reader = new BufferedReader(new FileReader((File) object));
 			setData(reader);
 		}
 	}
-	
-	private void setData(BufferedReader reader) throws NumberFormatException, IOException {
+
+	private void setData(BufferedReader reader) throws NumberFormatException,
+			IOException {
 		String line;
 		String newLine = "\n";
 		while ((line = reader.readLine()) != null) {
@@ -179,86 +188,96 @@ public class ItemList {
 			itemId[i] = Integer.parseInt(split[0]);
 			itemName[i] = split[1];
 			if (i != 23027) {
-				itemIdField.append(itemId[i] +newLine);
-				itemNameField.append(itemName[i] +newLine);
+				itemIdField.append(itemId[i] + newLine);
+				itemNameField.append(itemName[i] + newLine);
 			} else {
-				itemIdField.append(itemId[i]+"");
-				itemNameField.append(itemName[i]+"");
+				itemIdField.append(itemId[i] + "");
+				itemNameField.append(itemName[i] + "");
 			}
 		}
 		reader.close();
 	}
-	
+
 	private boolean checkUpdate() throws IOException {
 		loadData();
-		File file = new File(System.getProperty("user.home")+"/matrixCache4/itemlist.txt");
+		File file = new File(System.getProperty("user.home")
+				+ "/matrixCache4/itemlist.txt");
 		if (!file.exists()) {
-			JOptionPane.showMessageDialog(contentPane,"Error: File not found! Try after restarting your itemlist.", "Error", JOptionPane.ERROR_MESSAGE);
+			JOptionPane
+					.showMessageDialog(
+							contentPane,
+							"Error: File not found! Try after restarting your itemlist.",
+							"Error", JOptionPane.ERROR_MESSAGE);
 			return true;
 		}
 		getUrlFile();
 		getPathFile();
 		if (getFileVersion() < getWebVersion()) {
-			JOptionPane.showMessageDialog(contentPane,"Updating... Please wait!", "Updating...", JOptionPane.ERROR_MESSAGE);
+			JOptionPane.showMessageDialog(contentPane,
+					"Updating... Please wait!", "Updating...",
+					JOptionPane.ERROR_MESSAGE);
 			file.delete();
 			loadData();
 			return true;
 		} else {
-			JOptionPane.showMessageDialog(contentPane,"You currently have the latest version!", "Update", JOptionPane.ERROR_MESSAGE);
+			JOptionPane.showMessageDialog(contentPane,
+					"You currently have the latest version!", "Update",
+					JOptionPane.ERROR_MESSAGE);
 			return true;
 		}
 	}
-	
+
 	private void getPathFile() throws IOException {
-		File file = new File(System.getProperty("user.home")+"/matrixCache4/itemlist.txt");
+		File file = new File(System.getProperty("user.home")
+				+ "/matrixCache4/itemlist.txt");
 		if (!file.exists())
 			return;
 		BufferedReader reader;
 		String line;
 		reader = new BufferedReader(new FileReader(file));
-		while((line = reader.readLine()) != null) {
+		while ((line = reader.readLine()) != null) {
 			if (line.startsWith("//V")) {
 				line = line.replace("//Version = ", "");
 				setFileVersion(Double.parseDouble(line));
 			}
 		}
 	}
-	
+
 	private void getUrlFile() throws IOException {
 		BufferedReader reader;
 		String line;
 		URL url = new URL("http://www.fathienblade.com/txt/itemlist.txt");
 		reader = new BufferedReader(new InputStreamReader(url.openStream()));
-		while((line = reader.readLine()) != null) {
+		while ((line = reader.readLine()) != null) {
 			if (line.startsWith("//V")) {
 				line = line.replace("//Version = ", "");
 				setWebVersion(Double.parseDouble(line));
 			}
 		}
 	}
-	
-	private void search() {
-	    String line = searchField.getText();
-	    itemIdField.setText("");
-	    itemNameField.setText("");
-	    int i = 0;
-	    String str2 = "\n";
-	    for (int j = 0; (j < itemName.length) && (itemName[j] != null); j++) {
-	      if (!itemName[j].toLowerCase().contains(line.toLowerCase()))
-	        continue;
-	      if (i != 0) {
-	    	  itemNameField.append(str2 + itemName[j]);
-	    	  itemIdField.append(str2 + itemId[j]);
-	      } else {
-	        i = 1;
-	        itemNameField.append(itemName[j]);
-	        itemIdField.append(itemId[j]+"");
-	      }
-	    }
 
-	    if (itemNameField.getText().equals(""))
-	    	itemNameField.setText("No Results Found");
-	  }
+	private void search() {
+		String line = searchField.getText();
+		itemIdField.setText("");
+		itemNameField.setText("");
+		int i = 0;
+		String str2 = "\n";
+		for (int j = 0; (j < itemName.length) && (itemName[j] != null); j++) {
+			if (!itemName[j].toLowerCase().contains(line.toLowerCase()))
+				continue;
+			if (i != 0) {
+				itemNameField.append(str2 + itemName[j]);
+				itemIdField.append(str2 + itemId[j]);
+			} else {
+				i = 1;
+				itemNameField.append(itemName[j]);
+				itemIdField.append(itemId[j] + "");
+			}
+		}
+
+		if (itemNameField.getText().equals(""))
+			itemNameField.setText("No Results Found");
+	}
 
 	public JPanel getContentPane() {
 		return contentPane;
@@ -285,7 +304,8 @@ public class ItemList {
 	}
 
 	public String getListName() throws NumberFormatException, IOException {
-		File file = new File(System.getProperty("user.home")+"/matrixCache4/itemlist.txt");
+		File file = new File(System.getProperty("user.home")
+				+ "/matrixCache4/itemlist.txt");
 		BufferedReader reader;
 		String line;
 		if (!file.exists()) {
@@ -294,15 +314,16 @@ public class ItemList {
 		} else {
 			reader = new BufferedReader(new FileReader(file));
 		}
-		while((line = reader.readLine()) != null) {
+		while ((line = reader.readLine()) != null) {
 			if (line.startsWith("//V")) {
-				line = line.replace("//Version = ", "").replace(".", "/").replace("<", "").replace(">", "");
-				setListName("Matrix "+line+" ItemList");
+				line = line.replace("//Version = ", "").replace(".", "/")
+						.replace("<", "").replace(">", "");
+				setListName("Matrix " + line + " ItemList");
 			}
 		}
 		return listName;
 	}
-	
+
 	public void setListName(String name) {
 		this.listName = name;
 	}
@@ -311,16 +332,19 @@ public class ItemList {
 		String osName = System.getProperty("os.name");
 		try {
 			if (osName.startsWith("Windows"))
-					Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+				Runtime.getRuntime().exec(
+						"rundll32 url.dll,FileProtocolHandler " + url);
 			else {
-					String[] browsers = { "firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape", "internet_explorer", "google_chrome" };
-					String browser = null;
-					for (int count = 0; count < browsers.length && browser == null; count++) 
-						if (Runtime.getRuntime().exec(
-								new String[] { "which", browsers[count] })
-                                                .waitFor() == 0)
-							browser = browsers[count];
-					Runtime.getRuntime().exec(new String[] { browser, url });
+				String[] browsers = { "firefox", "opera", "konqueror",
+						"epiphany", "mozilla", "netscape", "internet_explorer",
+						"google_chrome" };
+				String browser = null;
+				for (int count = 0; count < browsers.length && browser == null; count++)
+					if (Runtime.getRuntime()
+							.exec(new String[] { "which", browsers[count] })
+							.waitFor() == 0)
+						browser = browsers[count];
+				Runtime.getRuntime().exec(new String[] { browser, url });
 			}
 		} catch (Exception e) {
 		}
